<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/input_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/login"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter"
            android:textColor="@android:color/white"
            custom:pb_colorComplete="@color/green"
            custom:pb_colorError="@color/red"
            custom:pb_colorNormal="@color/light_blue"
            custom:pb_colorPressed="@color/light_blue"
            custom:pb_textComplete="@string/welcome"
            custom:pb_textProgress="@string/entering" />
    </LinearLayout>
</RelativeLayout>
