<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <TableLayout
                android:id="@+id/table_stats"
                style="@style/Table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/header_row"
                    style="@style/TableHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="0dp"
                        android:paddingStart="0dp"
                        android:text="@string/stats_task_group" />

                    <TextView
                        style="@style/TableHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stats_task_name" />

                    <TextView
                        style="@style/TableHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stats_task_average_time" />

                    <TextView
                        style="@style/TableHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stats_task_tries_count" />

                    <TextView
                        style="@style/TableHeaderText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stats_task_commands_count" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <TextView
        android:id="@+id/placeholder"
        style="@style/PlaceholderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/stats_empty" />
</RelativeLayout>