<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/list_item_sides_margin"
        android:paddingLeft="@dimen/list_item_sides_margin"
        android:paddingRight="@dimen/list_item_sides_margin"
        android:paddingStart="@dimen/list_item_sides_margin"
        android:paddingTop="@dimen/list_item_sides_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_title"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height_medium">

                <android.support.design.widget.TextInputEditText
                    style="@style/ListItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/world_setup_title_hint"
                    android:imeOptions="flagNoExtractUi" />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/picker_width_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height_medium">

                <TextView
                    style="@style/ListItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/world_setup_width_title" />

                <stydying.algo.com.algostudying.ui.views.SwipeNumberPicker
                    android:id="@+id/picker_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    app:snp_arrowColor="@color/white"
                    app:snp_backgroundColor="@color/deep_blue"
                    app:snp_max="10"
                    app:snp_min="0"
                    app:snp_numberColor="@color/white"
                    app:snp_value="95" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/picker_height_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height_medium">

                <TextView
                    style="@style/ListItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/world_setup_height_title" />

                <stydying.algo.com.algostudying.ui.views.SwipeNumberPicker
                    android:id="@+id/picker_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    app:snp_arrowColor="@color/white"
                    app:snp_backgroundColor="@color/deep_blue"
                    app:snp_max="10"
                    app:snp_min="1"
                    app:snp_numberColor="@color/white"
                    app:snp_value="95" />

            </FrameLayout>

            <TextView
                android:id="@+id/input_group"
                style="@style/ListItemStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height_medium"
                android:hint="@string/world_setup_group_title" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_description"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height_medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/world_setup_desc_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                style="@style/FloatingActionButtonListFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_create"
        style="@style/FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add_white_24dp" />
</RelativeLayout>