<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:padding="@dimen/content_margins">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margins"
            android:baselineAligned="false"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_pass"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pass"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_confirm_pass"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_pass"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_fab_footer" />
        </LinearLayout>
    </ScrollView>

    <stydying.algo.com.algostudying.ui.views.LoadingPlaceholderView
        android:id="@+id/error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>